--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
         <title>Enoch Silvestrelli | WDD 130</title>
     </head>
     <body>
+
         <header>
             <nav>
-                <a href="#">Home</a>
-                <a href="#wwr/">Rafting Website</a>
+                <a href="https://www.myhomewebsite.com/">Home</a>
+                <a href="https://www.myraftingwebsite.com/">Rafting Website</a>
             </nav>
         </header>
     
         <main>
               <h1>Enoch Silvestrelli Souza | WDD 130</h1>
-              <img src="images/profile.jpeg" alt="Hello, my name is Enoch Silvestrelli" width="200">
-              <p>Hello! My name is Enoch Silvestrelli and I am from Santos, Brazil. I am learning how to code a website.</p>
+              <img src="images/profile.jpeg" alt="Hello, my name is Enoch Silvestrelli Souza" width="200">
+              <p>Hello! My name is Enoch Silvestrelli Souza and I am from Santos, Brazil. I am learning how to code a website.</p>
         </main>
     
         <footer>
-            <p>&copy; 2025 &#10070; Enoch Silvestrelli &#10070; Brazil</p>
+            <p>&copy; 2025 &#10070; Enoch Silvestrelli Souza &#10070; Brazil</p>
         </footer>
+
     </body>
 </html>
