index page enhancements

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles/styles.css"
+        <link rel="stylesheet" href="styles/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Enoch Silvestrelli | WDD 130</title>
+        <meta name="description" content="Enoch Silvestrelli | WDD 130: Web Fundamentals | Introduction to web site design and development.">
+        <meta name="author" content="Enoch Silvestrelli">
     </head>
     <body>
 
@@ -20,6 +22,12 @@
               <img src="images/profile.jpeg" alt="Hello, my name is Enoch Silvestrelli Souza" width="200">
               <p>Hello! My name is Enoch Silvestrelli Souza and I am from Santos, Brazil. I am learning how to code a website.</p>
         </main>
+
+        <aside>
+            <h2>Brazil</h2>
+            <img src="images/flag_of_brazil.png" alt="Flag of Brazil" width="200">
+            <p>Brazil is  a federation composed of 26 states and a Federal District.</p>
+        </aside>
     
         <footer>
             <p>&copy; 2025 &#10070; Enoch Silvestrelli Souza &#10070; Brazil</p>
