--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -32,7 +32,7 @@
             </main>
 
             <aside>
-                <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/cedar-city-utah/320x180/Cedar-City-1978603.jpg" width="200">
+                <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/cedar-city-utah/320x180/Cedar-City-1978603.jpg" alt="Cedar City Utah Temple" width="200">
             </aside>
 
             <footer>
