variables css added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
               <h1>Enoch Silvestrelli Souza | WDD 130</h1>
               <img src="images/profile.jpeg" alt="Hello, my name is Enoch Silvestrelli Souza" width="200">
-              <p>Hello! My name is Enoch Silvestrelli Souza and I am from Santos, Brazil. I am learning how to code a website.</p>
+              <p>Hello! My name is Enoch Silvestrelli Souza and I am from Santos, Brazil. I am currently learning how to code websites.</p>
         </main>
 
         <aside>
