--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/rafting.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title class="title">Insert a title here</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="top-bar">
+      <div class="logo">
         <img src="images/logo.png" alt="Rafting's logo" width="200">
-        <nav>
-            <a href="index.html">Home Page</a>
-            <a href="about.html">About</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+      </div>
+      <nav class="links">
+        <a href="index.html" class="nav-item">Home Page</a>
+        <a href="about.html" class="nav-item">About</a>
+        <a href="trips.html" class="nav-item">Trips</a>
+        <a href="contact.html" class="nav-item">Contact</a>
+      </nav>
     </header>
     <main>
         <div class="hero">
-            <img src="images/background.jpg" alt="Background image of a river">
-            <h1>Fischetti Rafting Co.</h1>
+            <img src="images/background.jpg" alt="Background image of a river" width="90%">
+            <h1 class="company-name">Fischetti Rafting Co.</h1>
             <article>
-                <img src="images/happy.jpg" alt="Happy client smiling" width="200">
-                <p>Add company purpose, mission, creed, motto, etc.</p>
+                <img src="images/happy.jpg" alt="Happy client smiling">
+                <p class="purpose">Add company purpose, mission, creed, motto, etc.</p>
             </article>
         </div>
         <section>
-            <h2>History</h2>
-            <p>Add history of the company</p>
+            <h2 class="history-title">History</h2>
+            <p class="history-body">Add history of the company</p>
         </section>
         <section>
-            <h2>Adventure Awaits You!</h2>
-            <img src="images/" alt="">
-            <img src="images/" alt="">
-            <img src="images/" alt="">
-            <img src="images/" alt="">
-            <img src="images/" alt="">
+            <h2 class="calling">Adventure Awaits You!</h2>
+            <img src="images/rafting17.jpg" alt="Rafting practice example">
+            <img src="images/rafting19.jpg" alt="Rafting practice example">
+            <img src="images/rafting4.jpg" alt="Rafting practice example">
+            <img src="images/rafting42.jpg" alt="Rafting practice example">
+            <img src="images/rafting59.jpg" alt="Rafting practice example">
         </section>
     </main>
     <footer>
-        <p>&copy; 2025; Fischetti Rafting Co.; Enoch Silvestrelli Souza</p>
+        <p class="footer">&copy 2025 Fischetti Rafting Co. Enoch Silvestrelli Souza</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
-              <img src="images/facebook.webp" alt="Facebook">
+              <img src="images/facebook.webp" alt="Facebook" width="50">
             </a>
             <a href="https://twitter.com">
-              <img src="images/twitter.webp" alt="Twitter">
+              <img src="images/twitter.webp" alt="Twitter" width="50">
             </a>
             <a href="https://instagram.com">
-              <img src="images/instagram.webp" alt="Instagram">
+              <img src="images/instagram.webp" alt="Instagram" width="50">
             </a>
           </nav>          
     </footer>
