validated html and css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,11 +24,11 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/background.jpg" alt="Background image of a river" width="90%">
-            <h1 class="company-name">Fischetti Rafting Co.</h1>
+            <img src="images/background.jpg" alt="Background image of a river" width="850">
             <article>
-                <img src="images/happy.jpg" alt="Happy client smiling">
-                <p class="purpose">Add company purpose, mission, creed, motto, etc.</p>
+              <h1 class="company-name">Fischetti Rafting Co.</h1>
+              <img src="images/happy.jpg" alt="Happy client smiling">
+              <p class="purpose">Add company purpose, mission, creed, motto, etc.</p>
             </article>
         </div>
         <section>
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <p class="footer">&copy 2025 Fischetti Rafting Co. Enoch Silvestrelli Souza</p>
+        <p class="footer">&copy; 2025 Fischetti Rafting Co. Enoch Silvestrelli Souza</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
               <img src="images/facebook.webp" alt="Facebook" width="50">
