--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,6 +26,7 @@
       <img src="images/background.jpg" alt="Background image of a river" width="850">
       <h1>Fischetti Rafting Co.</h1>
       <article>
+        <h2>Our Mission</h2>
         <img src="images/happy.jpg" alt="Happy client smiling" height="210">
         <p>At Fischetti Rafting Co., we believe that the river is more than just water—it’s a teacher, a healer, and a source of endless adventure. Our mission is to provide unforgettable experiences that inspire a deeper connection to nature and a spirit of exploration in everyone who joins us on the water.</p>
       </article>
