--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,6 @@
       <img src="images/background.jpg" alt="Background image of a river" width="850">
       <h1>Fischetti Rafting Co.</h1>
       <article>
-        <h2>Our Mission</h2>
         <img src="images/happy.jpg" alt="Happy client smiling" height="210">
         <p>At Fischetti Rafting Co., we believe the river is more than water—it’s a teacher, 
           healer, and endless adventure. Our mission is to create unforgettable experiences that 
@@ -37,21 +36,23 @@
         </p>
       </article>
     </div>
-    <section>
+    <section class="history">
       <h2>History</h2>
       <p>In the heart of the rugged wilderness, where roaring rivers carve through ancient forests and misty mountains, the story of Fischetti Rafting Co. began. Founded in 1905 by Rosalia Fischetti, a passionate adventurer with a love for the untamed waters, our company was born out of a simple dream: to share the thrill of the rapids with the world.
-      Nazzareno, a third-generation Italian immigrant, grew up listening to his grandmother's tales of sailing across the Mediterranean. These stories sparked a deep connection to water and adventure in Nazzareno's heart. After years of exploring rivers across the globe, he returned to his roots in the Pacific Northwest, where he discovered the perfect blend of wild rivers and breathtaking landscapes.
-      With nothing but a single raft, a handful of paddles, and an unshakable determination, Nazzareno started Fischetti Rafting Co. in a small riverside cabin. Word of his expertly guided trips and infectious enthusiasm spread quickly, and soon, adventurers from all over flocked to experience the thrill of the rapids with Nazzareno and his team.
-      Over the decades, Fischetti Rafting Co. has grown into a family legacy. Nazzareno's children, Sophia and Luca, now lead the company, bringing their own passion for adventure and innovation. Together, they've expanded our offerings to include everything from beginner-friendly floats to adrenaline-pumping whitewater expeditions.
-      Today, Fischetti Rafting Co. is more than just a rafting company—it's a community of adventurers, nature lovers, and thrill-seekers. We're proud to continue Nazzareno's mission of connecting people with the raw beauty of nature, one paddle stroke at a time.</p>
+      Nazzareno, a third-generation Italian immigrant, grew up listening to his grandmother's tales of sailing across the Mediterranean.</p>
+      <img src="images/rafting2.jpg" alt="Rafting practice example" width="200">
+      <p>With nothing but a single raft, a handful of paddles, and an unshakable determination, Nazzareno started Fischetti Rafting Co. in a small riverside cabin. Word of his expertly guided trips and infectious enthusiasm spread quickly, and soon, adventurers from all over flocked to experience the thrill of the rapids with Nazzareno and his team.
+      Over the decades, Fischetti Rafting Co. has grown into a family legacy.</p>
     </section>
     <section>
       <h2>Adventure Awaits You!</h2>
-      <img src="images/rafting17.jpg" alt="Rafting practice example" width="200">
-      <img src="images/rafting19.jpg" alt="Rafting practice example" width="200">
-      <img src="images/rafting4.jpg" alt="Rafting practice example" width="200">
-      <img src="images/rafting42.jpg" alt="Rafting practice example" width="200">
-      <img src="images/rafting59.jpg" alt="Rafting practice example" width="200">
+      <div class="adventure-images">
+        <img src="images/rafting17.jpg" alt="Rafting practice example" width="200">
+        <img src="images/rafting19.jpg" alt="Rafting practice example" width="200">
+        <img src="images/rafting4.jpg" alt="Rafting practice example" width="200">
+        <img src="images/rafting42.jpg" alt="Rafting practice example" width="200">
+        <img src="images/rafting59.jpg" alt="Rafting practice example" width="200">
+      </div>
     </section>
   </main>
   <footer>
