--- a/wwr/about.html
+++ b/wwr/about.html
@@ -47,13 +47,29 @@
     <section>
       <h2>Adventure Awaits You!</h2>
       <div class="adventure-images">
-        <img src="images/rafting17.jpg" alt="Rafting practice example" width="200">
-        <img src="images/rafting19.jpg" alt="Rafting practice example" width="200">
-        <img src="images/rafting4.jpg" alt="Rafting practice example" width="200">
-        <img src="images/rafting42.jpg" alt="Rafting practice example" width="200">
-        <img src="images/rafting59.jpg" alt="Rafting practice example" width="200">
+        <figure>
+          <img src="images/rafting17.jpg" alt="Rafting practice example" width="200">
+          <figcaption>Joy on the rapids</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting19.jpg" alt="Rafting practice example" width="200">
+          <figcaption>Thrill and excitement</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting4.jpg" alt="Rafting practice example" width="200">
+          <figcaption>Wild river ride</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting42.jpg" alt="Rafting practice example" width="200">
+          <figcaption>Extreme water adventure</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting59.jpg" alt="Rafting practice example" width="200">
+          <figcaption>Challenge and teamwork</figcaption>
+        </figure>
       </div>
     </section>
+    
   </main>
   <footer>
     <p>&copy; 2025 | Fischetti Rafting Co. | Enoch Silvestrelli Souza</p>
