--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,10 +27,10 @@
       <h1>Fischetti Rafting Co.</h1>
       <article>
         <img src="images/happy.jpg" alt="Happy client smiling" height="210">
-        <p>At Fischetti Rafting Co., we believe the river is more than water—it’s a teacher, 
+        <p>At Fischetti Rafting Co., we believe the river is more than water—it's a teacher, 
           healer, and endless adventure. Our mission is to create unforgettable experiences that 
           inspire a deeper connection to nature and ignite a spirit of exploration in everyone 
-          who joins us on the water. We’re passionate about sharing the transformative power of 
+          who joins us on the water. We're passionate about sharing the transformative power of 
           rivers, fostering teamwork, and creating memories that last a lifetime. Join us to 
           discover the thrill of the rapids and the serenity of the wild.
         </p>
