--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -106,7 +106,8 @@
       <a href="https://instagram.com">
         <img src="images/instagram.webp" alt="Instagram" width="50">
       </a>
-      </nav>          
+      </nav>
+      <p><a href="https://app.moqups.com/LvvUVZCPtxqsz00FGSlMv85CfssRn9sX/view/page/aced44a7d" target="_blank">Wireframe</a></p>          
   </footer>
 </body>
 </html>
