--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -89,7 +89,10 @@
         
       
         <div class="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3645.8123544600453!2d-46.3341154323953!3d-23.967074701650482!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbr!4v1739052339215!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe class="map-embed"
+        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3645.8123544600453!2d-46.3341154323953!3d-23.967074701650482!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbr!4v1739052339215!5m2!1sen!2sbr"
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
         </div>
       </form> 
     </div>
