--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -83,7 +83,7 @@
                 <textarea id="message" name="message" rows="4" placeholder="I'd like to..."></textarea>
             </div>
 
-            <button type="submit">Submit</button>
+            <button type="submit">Send</button>
         </fieldset>
 
         
