--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/rafting.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Fischetti Rafting Co. is a family-owned rafting company founded in Italy.">
+  <meta name="description" content="Learn about the history, mission, and values of Fischetti Rafting Co., a family-owned rafting company founded in Italy.">
   <meta name="author" content="Enoch Silvestrelli Souza">
   <title>Fischetti Rafting Co. - About Us</title>
 </head>
