--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/rafting.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Contact Us">
+  <meta name="description" content="Get in touch with Fischetti Rafting Co. Contact us for more information about our rafting trips and services.">
   <meta name="author" content="Enoch Silvestrelli Souza">
   <title>Contact Us - Fischetti Rafting Co.</title>
 </head>
