--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/rafting.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Home Page - Fischetti Rafting Co.">
+  <meta name="description" content="Welcome to Fischetti Rafting Co. Explore our exciting rafting trips and learn more about our services.">
   <meta name="author" content="Enoch Silvestrelli Souza">
   <title>Home - Fischetti Rafting Co.</title>
 </head>
