--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/rafting.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Explore our exciting rafting trips and adventures at Fischetti Rafting Co.">
+  <meta name="description" content="Discover the thrilling rafting trips offered by Fischetti Rafting Co. Find the perfect adventure for you and your family.">
   <meta name="author" content="Enoch Silvestrelli Souza">
   <title>Trips - Fischetti Rafting Co.</title>
 </head>
